input: fix axis shortcut direction

Currently kwin directly construct pointerAxis events from libinput,
instead of relying on QWheelEvent. So positive delta corresponds to
right/down, instead of left/up.

BUG: 483601