autotests/integration/no_global_shortcuts_test.cpp
@@ -152,10 +152,10 @@ void NoGlobalShortcutsTest::testAxisShortcut_data()
     QTest::addColumn<Qt::Orientation>("direction");
     QTest::addColumn<int>("sign");
 
-    QTest::newRow("up") << Qt::Vertical << 1;
-    QTest::newRow("down") << Qt::Vertical << -1;
-    QTest::newRow("left") << Qt::Horizontal << 1;
-    QTest::newRow("right") << Qt::Horizontal << -1;
+    QTest::newRow("up") << Qt::Vertical << -1;
+    QTest::newRow("down") << Qt::Vertical << 1;
+    QTest::newRow("left") << Qt::Horizontal << -1;
+    QTest::newRow("right") << Qt::Horizontal << 1;
 }
 
 void NoGlobalShortcutsTest::testAxisShortcut()
@@ -167,9 +167,9 @@ void NoGlobalShortcutsTest::testAxisShortcut()
     QFETCH(int, sign);
     PointerAxisDirection axisDirection = PointerAxisUp;
     if (direction == Qt::Vertical) {
-        axisDirection = sign > 0 ? PointerAxisUp : PointerAxisDown;
+        axisDirection = sign < 0 ? PointerAxisUp : PointerAxisDown;
     } else {
-        axisDirection = sign > 0 ? PointerAxisLeft : PointerAxisRight;
+        axisDirection = sign < 0 ? PointerAxisLeft : PointerAxisRight;
     }
     input()->registerAxisShortcut(Qt::MetaModifier, axisDirection, action.get());
 
